Підключиня датафекера і провірка роботи