@@ -1,18 +1,22 @@
 package smarthomesimulator;
 
-public final class ValidationUtils {
-
-    private ValidationUtils() {}
+public class ValidationUtils {
 
     public static void requireNotBlank(String value, String fieldName) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException(fieldName + " cannot be null or empty");
+        if (value == null || value.trim().isEmpty()) {
+            throw new IllegalArgumentException(fieldName + " cannot be empty");
         }
     }
 
     public static void requirePositive(double value, String fieldName) {
-        if (value < 0) {
-            throw new IllegalArgumentException(fieldName + " cannot be negative");
+        if (value <= 0) {
+            throw new IllegalArgumentException(fieldName + " must be positive");
+        }
+    }
+
+    public static void requireNotNull(Object obj, String fieldName) {
+        if (obj == null) {
+            throw new IllegalArgumentException(fieldName + " cannot be null");
         }
     }
 }
